# graph_forge

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  codecov.yml  conanfile.py  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
.github/scripts/: run_clang_tidy.py
.github/workflows/: ci.yml
cmake/: Dependencies.cmake  GraphForgeCoverage.cmake  GraphForgeWarnings.cmake  graph_forgeConfig.cmake.in
ports/graph_forge/: copyright  portfile.cmake  vcpkg.json
src/graph_forge/: graph_forge.hpp
src/storage/: adjacency_list.h  compressed_graph.h
src/utils/: concepts.h  helpers.h  traits.h
tests/: CMakeLists.txt
tests/unit_tests/: test_adjacency_list.cpp  test_compressed_graph.cpp  test_concepts_traits.cpp  test_helpers.cpp  test_umbrella_header.cpp
